<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gizwits.gizdataaccesssdkdemo.activitys.MainActivity" >
	<item
        android:id="@+id/action_logout"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
    <item
        android:id="@+id/action_changePsw"
        android:showAsAction="never"
        android:title="@string/action_changePsw"/>
    <item
        android:id="@+id/action_change2phone"
        android:showAsAction="never"
        android:title="@string/action_change2phone"/>
    <item
        android:id="@+id/action_change2mail"
        android:showAsAction="never"
        android:title="@string/action_change2mail"/>
    <item
        android:id="@+id/action_anonychange2phone"
        android:showAsAction="never"
        android:title="@string/action_anonychange2phone"/>
    <item
        android:id="@+id/action_anonychange2mail"
        android:showAsAction="never"
        android:title="@string/action_anonychange2mail"/>
</menu>